--- a/app/globals.css
+++ b/app/globals.css
@@ -124,10 +124,10 @@
   }
 
     .volume-card-wrapper {
-        @apply relative w-40 h-60 cursor-pointer transition-transform hover:scale-105 hover:shadow-lg;
+        @apply relative cursor-pointer transition-transform hover:scale-105 hover:shadow-lg;
     }
 
     .volume-card {
-        @apply flex flex-col items-center h-full px-4 py-8 border rounded-xs bg-slate-200 dark:bg-slate-600;
+        @apply flex flex-col items-center w-40 h-60 px-4 py-8 border rounded-xs bg-slate-200 dark:bg-slate-600;
     }
 }
